<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About ALC</string>
    <string name="slack_username">Slack Username :</string>
    <string name="charlesbest8">CharlesBest8</string>
    <string name="_07061011343">07061011343</string>
    <string name="charlesbest8_gmail_com">Charlesbest8@gmail.com</string>
    <string name="email">Email :</string>
    <string name="nigeria">Nigeria</string>
    <string name="country">Country :</string>
    <string name="android">Android</string>
    <string name="track">Track :</string>
</resources>
