<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:padding="16dp">


    <FrameLayout android:layout_width="match_parent"
                 android:id="@+id/frame"
                 android:layout_height="180dp">
        <ImageView android:layout_width="150dp" 
                   android:layout_gravity="center"
                   android:src="@drawable/ff"
                   android:scaleType="fitXY"
                   android:layout_height="150dp"/>
    </FrameLayout>
    <TextView android:layout_width="wrap_content"
              android:textSize="20sp"
              android:layout_below="@+id/frame"
              android:text="Charles Best"
              android:textStyle="bold"
              android:layout_centerHorizontal="true"
              android:id="@+id/name"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:textSize="18sp"
              android:layout_below="@+id/name"
              android:background="@color/colorButton"
              android:id="@+id/top"
              android:layout_height="2dp"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:layout_marginTop="20dp"
              android:text="@string/track"
              android:layout_below="@id/top"
              android:id="@+id/textTrack"
              android:textStyle="bold"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:layout_marginTop="20dp"
              android:textSize="18sp"
              android:layout_below="@id/top"
              android:text="@string/android"
              android:layout_toRightOf="@id/textTrack"
              android:id="@+id/track"
              android:textStyle="bold"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:layout_marginTop="20dp"
              android:text="@string/country"
              android:id="@+id/textCountry"
              android:textStyle="bold"
              android:layout_below="@id/textTrack"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:text="@string/nigeria"
              android:layout_marginTop="20dp"
              android:id="@+id/country"
              android:textStyle="bold"
              android:layout_below="@id/track"
              android:layout_toRightOf="@id/textCountry"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:layout_marginTop="20dp"
              android:text="@string/email"
              android:id="@+id/textEmail"
              android:textStyle="bold"
              android:layout_below="@id/textCountry"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:layout_marginTop="20dp"
              android:text="@string/charlesbest8_gmail_com"
              android:id="@+id/email"
              android:layout_below="@id/country"
              android:layout_toRightOf="@id/textEmail"
              android:textStyle="bold"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:text="Phone Number : "
              android:layout_marginTop="20dp"
              android:id="@+id/textPhoneNumber"
              android:layout_below="@id/textEmail"
              android:textStyle="bold"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:text="@string/_07061011343"
              android:layout_marginTop="20dp"
              android:id="@+id/phoneNumber"
              android:textStyle="bold"
              android:layout_below="@id/email"
              android:layout_toRightOf="@id/textPhoneNumber"
              android:layout_height="wrap_content"/>
   
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:text="@string/slack_username"
              android:id="@+id/textSlackUsername"
              android:textStyle="bold"
              android:layout_marginTop="20dp"
              android:layout_below="@id/textPhoneNumber"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="18sp"
              android:text="@string/charlesbest8"
              android:id="@+id/slackUsername"
              android:layout_marginTop="20dp"
              android:textStyle="bold"
              android:layout_below="@id/phoneNumber"
              android:layout_toRightOf="@id/textSlackUsername"
              android:layout_height="wrap_content"/>

</RelativeLayout>